--- a/enlaces.html
+++ b/enlaces.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Enlaces útiles para preparar la oposición a TCEE">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,6 @@
             <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
         </div>
     </header>
-
     <nav class="main-nav">
         <div class="nav-container">
             <ul class="nav-list">
@@ -29,12 +28,10 @@
             </ul>
         </div>
     </nav>
-
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
                 <h2 class="section-title">ENLACES</h2>
-                
                 <div class="links-section">
                     <h3>Enlaces en español</h3>
                     <ul class="links-list">
@@ -47,23 +44,21 @@
                         <li><a href="https://www.wto.org/spanish/blogs_s/blogs_s.htm" target="_blank">Blog de la OMC</a></li>
                     </ul>
                 </div>
-
                 <div class="links-section">
                     <h3>Enlaces en inglés</h3>
                     <ul class="links-list">
-                        <li><a href="https://www.piie.com/" target="_blank">Peterson Institute for International Economics (PIIE)</a></li>
-                        <li><a href="https://www.ceps.eu/" target="_blank">Centre for European Policy Studies (CEPS)</a></li>
+                        <li><a href="https://www.piie.com/" target="_blank">Peterson Institute (PIIE)</a></li>
+                        <li><a href="https://www.ceps.eu/" target="_blank">Centre for European Policy Studies</a></li>
                         <li><a href="https://www.bruegel.org/" target="_blank">Bruegel</a></li>
                         <li><a href="https://www.economist.com/finance-and-economics" target="_blank">The Economist</a></li>
                         <li><a href="https://www.ft.com/" target="_blank">Financial Times</a></li>
                         <li><a href="https://www.project-syndicate.org/section/economics" target="_blank">Project Syndicate</a></li>
-                        <li><a href="https://www.hetwebsite.net/het/" target="_blank">The History of Economic Thought (HET) Website</a></li>
+                        <li><a href="https://www.hetwebsite.net/het/" target="_blank">History of Economic Thought</a></li>
                         <li><a href="https://www.imf.org/en/Blogs" target="_blank">IMF Blogs</a></li>
                         <li><a href="https://www.wto.org/english/blogs_e/blogs_e.htm" target="_blank">WTO Blogs</a></li>
                         <li><a href="https://blogs.worldbank.org/en/home" target="_blank">World Bank Blogs</a></li>
                     </ul>
                 </div>
-
                 <div class="links-section">
                     <h3>Enlaces en francés</h3>
                     <ul class="links-list">
@@ -73,10 +68,9 @@
                         <li><a href="https://www.lemonde.fr/" target="_blank">Le Monde</a></li>
                         <li><a href="https://www.imf.org/fr/Blogs" target="_blank">Blog du FMI</a></li>
                         <li><a href="https://www.wto.org/french/blogs_f/blogs_f.htm" target="_blank">Blog de l'OMC</a></li>
-                        <li><a href="https://blogs.worldbank.org/fr/home" target="_blank">Blogs de la Banque mondiale</a></li>
+                        <li><a href="https://blogs.worldbank.org/fr/home" target="_blank">Blogs Banque mondiale</a></li>
                     </ul>
                 </div>
-
                 <div class="links-section">
                     <h3>Algo más ameno</h3>
                     <ul class="links-list">
@@ -88,7 +82,6 @@
             </article>
         </div>
     </main>
-
     <footer class="site-footer">
         <div class="footer-content">
             <p>Víctor Gutiérrez Marcos</p>
