--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <meta name="description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="site-header">
         <div class="header-content">
-            <h1 class="site-title">
-                <a href="index.html">Víctor Gutiérrez Marcos</a>
-            </h1>
+            <h1 class="site-title"><a href="index.html">Víctor Gutiérrez Marcos</a></h1>
             <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
         </div>
     </header>
@@ -45,18 +43,21 @@
                         <li>Algunos <a href="enlaces.html">enlaces</a> de utilidad para preparar la oposición.</li>
                     </ul>
 
-                    <p>Todos los contenidos están disponibles en una única carpeta (que se puede descargar en formato .zip) <a href="https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_?usp=drive_link" target="_blank" class="highlight-link">aquí</a>.</p>
+                    <div class="highlight-box">
+                        <p>Todos los contenidos están disponibles en una única carpeta (que se puede descargar en formato .zip):</p>
+                        <a href="https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_?usp=drive_link" target="_blank" class="highlight-link">📁 Descargar todos los materiales</a>
+                    </div>
 
                     <p>Confío que todos estos materiales permitan hacer que esta oposición sea más accesible y faciliten la siempre complicada tarea del opositor.</p>
 
-                    <h3>Otras excelentes webs de recopilación de temas:</h3>
+                    <h3>Otras excelentes webs de recopilación de temas</h3>
                     <ul>
                         <li><a href="https://www.alfonsosahuquillo.com/" target="_blank">Alfonso Sahuquillo</a> <em>(Técnico Comercial y Economista del Estado de la promoción de 2016)</em>.</li>
                         <li><a href="http://fabiansalazar.es/oposicion/" target="_blank">Miguel Fabián Salazar</a> <em>(Técnico Comercial y Economista del Estado de la promoción de 2019)</em>.</li>
                         <li>La página web de la ATCEE contiene <a href="https://atcee.es/la-oposicion-tcee/recursos_para_preparar_la_oposicion/" target="_blank">recursos para preparar la oposición</a> incluyendo un <a href="https://sites.google.com/view/apuntes-tcee/" target="_blank">repositorio de apuntes</a>.</li>
                     </ul>
 
-                    <h3>También es interesante conocer:</h3>
+                    <h3>También es interesante conocer</h3>
                     <ul>
                         <li>La <a href="https://atcee.es/la-oposicion-tcee/" target="_blank">web de la Asociación de Técnicos Comerciales y Economistas del Estado</a> incluye toda la información relevante sobre el proceso y las funciones del cuerpo.</li>
                         <li>En <a href="https://www.icex-ceco.es/empleados-publicos" target="_blank">ICEX-CECO</a> se organizan grupos de preparación de la oposición.</li>
