--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Víctor Gutiérrez Marcos - Técnico Comercial y Economista del Estado">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -39,7 +39,13 @@
                     <h3>Víctor Gutiérrez Marcos</h3>
                     <p class="title">Técnico Comercial y Economista del Estado</p>
                     <p class="promotion">Promoción LXXIII</p>
-                    <a href="mailto:victorgutierrezmarcos@gmail.com" class="contact-link">victorgutierrezmarcos@gmail.com</a>
+                    <a href="mailto:victorgutierrezmarcos@gmail.com" class="contact-link">✉ victorgutierrezmarcos@gmail.com</a>
+                    
+                    <div class="linkedin-badge">
+                        <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="victorgutierrezmarcos" data-version="v1">
+                            <a class="badge-base__link LI-simple-link" href="https://es.linkedin.com/in/victorgutierrezmarcos?trk=profile-badge">Víctor Gutiérrez Marcos</a>
+                        </div>
+                    </div>
                 </div>
             </article>
         </div>
@@ -50,5 +56,8 @@
             <p>Víctor Gutiérrez Marcos</p>
         </div>
     </footer>
+
+    <!-- LinkedIn Badge Script -->
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </body>
 </html>
