--- a/temario/index.html
+++ b/temario/index.html
@@ -7,19 +7,16 @@
     <meta name="description" content="Temario para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="site-header">
         <div class="header-content">
-            <h1 class="site-title">
-                <a href="../index.html">Víctor Gutiérrez Marcos</a>
-            </h1>
+            <h1 class="site-title"><a href="../index.html">Víctor Gutiérrez Marcos</a></h1>
             <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
         </div>
     </header>
-
     <nav class="main-nav">
         <div class="nav-container">
             <ul class="nav-list">
@@ -31,62 +28,59 @@
             </ul>
         </div>
     </nav>
-
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
                 <h2 class="section-title">TEMARIO</h2>
-                
                 <div class="content-text">
                     <p>La recopilación de materiales es el principal objetivo de esta web. Están agrupados por ejercicios, adoptando para cada ejercicio el enfoque y el formato que he considerado más adecuado.</p>
-
-                    <p>Si bien es cierto que la utilización de manuales de referencia y artículos originales resulta de gran ayuda para una mejor comprensión, en ocasiones, pueden resultar inabarcables debido a las restricciones de tiempo. Por ello, es habitual la utilización de "temas" elaborados por otros opositores que facilitan esta tarea. Mi objetivo en esta web es compartir los temas que elaboré durante mi período como opositor, y que incluyen contenidos que me han sido útiles de diversos manuales, artículos y temas elaborados por otros opositores. En especial, me basé en los temas y los valiosísimos comentarios de mi preparador, Juan Luis Cordero Tarifa, y en los temas de ICEX-CECO en su penúltima edición (enriquecidos a su vez por las aportaciones de Ángel Rodríguez y José Luis Rodríguez).</p>
-
-                    <p>Hasta el momento están actualizados hasta finales de 2023 y he cambiado la numeración para que coincida con la del nuevo temario. Además, cada tema introduce al principio un breve comentario en el que se describe en qué ha cambiado en el tema y qué haría falta cambiar en el documento para responder al nuevo título. En la medida de lo posible, procuraré corregir los errores que puedan contener estos materiales, así como ir actualizando estos apuntes y adaptándolos al nuevo cambio de temario (por el momento siguen el nuevo orden de temas y al principio de cada tema se comentan los cambios pertinentes que serían necesarios). Agradecería que si detectáis cualquier error (o si queréis compartir alguna sugerencia para mejorar el contenido del blog) me lo hicierais saber a través del correo <a href="mailto:victorgutierrezmarcos@gmail.com">victorgutierrezmarcos@gmail.com</a>.</p>
-
-                    <p>Por último, advertir de que los materiales aquí compartidos no son, ni mucho menos infalibles. Esto es así en 2 sentidos:</p>
-
-                    <p><em>(i)</em> ni los temas aquí presentados incluyen toda la información que se puede requerir al opositor;</p>
-
-                    <p><em>(ii)</em> ni toda la información aquí contenida es necesaria para aprobar.</p>
+                    <p>Mi objetivo en esta web es compartir los temas que elaboré durante mi período como opositor, y que incluyen contenidos de diversos manuales, artículos y temas elaborados por otros opositores. En especial, me basé en los temas y los valiosísimos comentarios de mi preparador, Juan Luis Cordero Tarifa, y en los temas de ICEX-CECO.</p>
+                    <p>Los materiales están actualizados hasta finales de 2023 con la numeración del nuevo temario. Cada tema incluye al principio un breve comentario sobre los cambios necesarios para adaptarse al nuevo título.</p>
+                    <div class="highlight-box">
+                        <p><strong>Nota importante:</strong> Los materiales aquí compartidos no son infalibles: <em>(i)</em> ni incluyen toda la información que se puede requerir al opositor; <em>(ii)</em> ni toda la información aquí contenida es necesaria para aprobar.</p>
+                        <p>Si detectas cualquier error o tienes sugerencias, escríbeme a <a href="mailto:victorgutierrezmarcos@gmail.com">victorgutierrezmarcos@gmail.com</a></p>
+                    </div>
                 </div>
-
                 <div class="cards-grid">
                     <div class="tema-card">
                         <a href="primer-ejercicio.html">
+                            <span class="tema-card-number">Ejercicio I</span>
                             <h3 class="tema-card-title">Primer ejercicio</h3>
                             <p class="tema-card-desc">Test y Dictamen de coyuntura</p>
                         </a>
                     </div>
                     <div class="tema-card">
                         <a href="segundo-ejercicio.html">
+                            <span class="tema-card-number">Ejercicio II</span>
                             <h3 class="tema-card-title">Segundo ejercicio</h3>
-                            <p class="tema-card-desc">Temas de Economía Española y de la UE</p>
+                            <p class="tema-card-desc">Exposición oral de temas</p>
                         </a>
                     </div>
                     <div class="tema-card">
                         <a href="tercer-ejercicio.html">
+                            <span class="tema-card-number">Ejercicio III</span>
                             <h3 class="tema-card-title">Tercer ejercicio</h3>
-                            <p class="tema-card-desc">Temas de Economía General y Economía Internacional</p>
+                            <p class="tema-card-desc">Economía General y Economía Internacional</p>
                         </a>
                     </div>
                     <div class="tema-card">
                         <a href="cuarto-ejercicio.html">
+                            <span class="tema-card-number">Ejercicio IV</span>
                             <h3 class="tema-card-title">Cuarto ejercicio</h3>
-                            <p class="tema-card-desc">Temas de Economía Española y Hacienda Pública</p>
+                            <p class="tema-card-desc">Economía Española y Hacienda Pública</p>
                         </a>
                     </div>
                     <div class="tema-card">
                         <a href="quinto-ejercicio.html">
+                            <span class="tema-card-number">Ejercicio V</span>
                             <h3 class="tema-card-title">Quinto ejercicio</h3>
-                            <p class="tema-card-desc">Marketing, Econometría y Derecho Administrativo</p>
+                            <p class="tema-card-desc">Marketing, Econometría y Derecho</p>
                         </a>
                     </div>
                 </div>
             </article>
         </div>
     </main>
-
     <footer class="site-footer">
         <div class="footer-content">
             <p>Víctor Gutiérrez Marcos</p>
