--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -7,19 +7,16 @@
     <meta name="description" content="Primer ejercicio - Test y Dictamen de coyuntura">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="site-header">
         <div class="header-content">
-            <h1 class="site-title">
-                <a href="../index.html">Víctor Gutiérrez Marcos</a>
-            </h1>
+            <h1 class="site-title"><a href="../index.html">Víctor Gutiérrez Marcos</a></h1>
             <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
         </div>
     </header>
-
     <nav class="main-nav">
         <div class="nav-container">
             <ul class="nav-list">
@@ -31,30 +28,24 @@
             </ul>
         </div>
     </nav>
-
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
                 <nav class="breadcrumb">
-                    <a href="index.html">Temario</a>
-                    <span>›</span>
-                    Primer ejercicio
+                    <a href="index.html">Temario</a><span>›</span>Primer ejercicio
                 </nav>
-
                 <h2 class="section-title">Primer ejercicio</h2>
-                
                 <div class="temas-list">
                     <div class="tema-item">
-                        <a href="https://drive.google.com/uc?export=download&id=1BRtywt-V8KJYXOaBcEn3zf93464cfOFL" target="_blank">Test</a>
+                        <a href="https://drive.google.com/uc?export=download&id=1BRtywt-V8KJYXOaBcEn3zf93464cfOFL" target="_blank">Test</a>: <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span>
                     </div>
                     <div class="tema-item">
-                        <a href="https://drive.google.com/file/d/1j6JQTXFzvbw4cdTnEKyBpsvCSoie0lLh/view?usp=drive_link" target="_blank">Dictamen de coyuntura</a>
+                        <a href="https://drive.google.com/file/d/1j6JQTXFzvbw4cdTnEKyBpsvCSoie0lLh/view?usp=drive_link" target="_blank">Dictamen de coyuntura</a>: <span class="tema-item-title">Guía y ejemplos para la elaboración del dictamen de coyuntura económica.</span>
                     </div>
                 </div>
             </article>
         </div>
     </main>
-
     <footer class="site-footer">
         <div class="footer-content">
             <p>Víctor Gutiérrez Marcos</p>
