--- a/temario/quinto-ejercicio.html
+++ b/temario/quinto-ejercicio.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quinto ejercicio | Víctor Gutiérrez Marcos</title>
-    <meta name="description" content="Quinto ejercicio - Marketing, Econometría y Derecho Administrativo">
+    <meta name="description" content="Quinto ejercicio - Marketing, Econometría y Derecho">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -17,7 +17,6 @@
             <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
         </div>
     </header>
-
     <nav class="main-nav">
         <div class="nav-container">
             <ul class="nav-list">
@@ -29,15 +28,11 @@
             </ul>
         </div>
     </nav>
-
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <nav class="breadcrumb">
-                    <a href="index.html">Temario</a><span>›</span>Quinto ejercicio
-                </nav>
+                <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Quinto ejercicio</nav>
                 <h2 class="section-title">Quinto ejercicio</h2>
-                
                 <div class="temas-list">
                     <div class="tema-item">
                         <a href="https://drive.google.com/file/d/1oj1lEEoUy4ShsuAuXvxCkTt60mGS8ITS/view?usp=drive_link" target="_blank">Parte A: Marketing internacional y técnicas comerciales</a>
@@ -52,7 +47,6 @@
             </article>
         </div>
     </main>
-
     <footer class="site-footer">
         <div class="footer-content">
             <p>Víctor Gutiérrez Marcos</p>
