--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segundo ejercicio | Víctor Gutiérrez Marcos</title>
-    <meta name="description" content="Segundo ejercicio - Temas de Economía Española y de la UE">
+    <meta name="description" content="Segundo ejercicio - Examen oral de temas">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header class="site-header">
         <div class="header-content">
-            <h1 class="site-title">
-                <a href="../index.html">Víctor Gutiérrez Marcos</a>
-            </h1>
+            <h1 class="site-title"><a href="../index.html">Víctor Gutiérrez Marcos</a></h1>
             <p class="site-description">Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado</p>
         </div>
     </header>
-
     <nav class="main-nav">
         <div class="nav-container">
             <ul class="nav-list">
@@ -31,26 +28,34 @@
             </ul>
         </div>
     </nav>
-
     <main class="main-content">
         <div class="content-container">
             <article class="page-content">
-                <nav class="breadcrumb">
-                    <a href="index.html">Temario</a>
-                    <span>›</span>
-                    Segundo ejercicio
-                </nav>
-
+                <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Segundo ejercicio</nav>
                 <h2 class="section-title">Segundo ejercicio</h2>
-                
                 <div class="content-text">
-                    <p>Temas de Economía Española y de la UE.</p>
-                    <p><em>Próximamente se añadirán los materiales correspondientes a este ejercicio.</em></p>
+                    <p>El segundo ejercicio consiste en la exposición oral de dos temas extraídos al azar: uno del <a href="tercer-ejercicio.html">tercer ejercicio</a> y otro del <a href="cuarto-ejercicio.html">cuarto ejercicio</a>.</p>
+                    <p>Para la preparación de este ejercicio, se utilizan los mismos materiales que para el tercer y cuarto ejercicio. Consulta los enlaces correspondientes para acceder a los temas:</p>
+                </div>
+                <div class="cards-grid">
+                    <div class="tema-card">
+                        <a href="tercer-ejercicio.html">
+                            <span class="tema-card-number">Parte A</span>
+                            <h3 class="tema-card-title">Tercer ejercicio</h3>
+                            <p class="tema-card-desc">Economía General y Economía Internacional</p>
+                        </a>
+                    </div>
+                    <div class="tema-card">
+                        <a href="cuarto-ejercicio.html">
+                            <span class="tema-card-number">Parte B</span>
+                            <h3 class="tema-card-title">Cuarto ejercicio</h3>
+                            <p class="tema-card-desc">Economía Española y Hacienda Pública</p>
+                        </a>
+                    </div>
                 </div>
             </article>
         </div>
     </main>
-
     <footer class="site-footer">
         <div class="footer-content">
             <p>Víctor Gutiérrez Marcos</p>
