--- a/temario/index.html
+++ b/temario/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Temario para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -53,7 +54,7 @@
                         <a href="segundo-ejercicio.html">
                             <span class="tema-card-number">Ejercicio II</span>
                             <h3 class="tema-card-title">Segundo ejercicio</h3>
-                            <p class="tema-card-desc">Exposición oral de temas</p>
+                            <p class="tema-card-desc">Idiomas: Inglés (obligatorio) y otro a elegir</p>
                         </a>
                     </div>
                     <div class="tema-card">
