--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segundo ejercicio | Víctor Gutiérrez Marcos</title>
-    <meta name="description" content="Segundo ejercicio - Examen oral de temas">
+    <meta name="description" content="Segundo ejercicio - Idiomas extranjeros">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Crimson+Pro:wght@300;400;500;600&family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" href="../favicon.svg" type="image/x-icon">
 </head>
 <body>
     <header class="site-header">
@@ -34,24 +36,27 @@
                 <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Segundo ejercicio</nav>
                 <h2 class="section-title">Segundo ejercicio</h2>
                 <div class="content-text">
-                    <p>El segundo ejercicio consiste en la exposición oral de dos temas extraídos al azar: uno del <a href="tercer-ejercicio.html">tercer ejercicio</a> y otro del <a href="cuarto-ejercicio.html">cuarto ejercicio</a>.</p>
-                    <p>Para la preparación de este ejercicio, se utilizan los mismos materiales que para el tercer y cuarto ejercicio. Consulta los enlaces correspondientes para acceder a los temas:</p>
-                </div>
-                <div class="cards-grid">
-                    <div class="tema-card">
-                        <a href="tercer-ejercicio.html">
-                            <span class="tema-card-number">Parte A</span>
-                            <h3 class="tema-card-title">Tercer ejercicio</h3>
-                            <p class="tema-card-desc">Economía General y Economía Internacional</p>
-                        </a>
+                    <p>El segundo ejercicio consiste en una <strong>prueba sobre idiomas extranjeros</strong>, debiendo demostrarse el conocimiento, como mínimo, de dos lenguas vivas:</p>
+                    
+                    <ul>
+                        <li><strong>Inglés</strong> (obligatorio y eliminatorio)</li>
+                        <li>Un segundo idioma a elegir entre: <em>francés, alemán, italiano, ruso, chino, árabe, portugués y japonés</em></li>
+                    </ul>
+
+                    <p>Para cada una de las lenguas, los aspirantes realizarán las siguientes pruebas:</p>
+
+                    <h3>a) Prueba escrita</h3>
+                    <p>Lectura a los candidatos de un texto en el idioma de que se trate durante el plazo máximo de quince minutos, pudiendo tomar notas durante la misma. A continuación, realizarán una redacción por escrito en el mismo idioma, durante un período máximo de noventa minutos, sobre el contenido del texto leído y sobre las preguntas que el tribunal formule. Se permitirá el uso del diccionario.</p>
+
+                    <h3>b) Prueba oral</h3>
+                    <p>Lectura, durante el plazo máximo de cinco minutos (previa preparación de diez minutos), de un texto seleccionado por el tribunal. A continuación, el candidato realizará una exposición oral durante el plazo máximo de diez minutos, sobre el tema del texto leído y sobre las preguntas que el tribunal formule. Asimismo, se procederá a la lectura de la prueba escrita.</p>
+
+                    <div class="highlight-box">
+                        <p><strong>Importante:</strong> A la realización de las pruebas del segundo idioma obligatorio y de los exámenes voluntarios, sólo se convocará a aquellos aspirantes que hayan superado la prueba de lengua inglesa, quedando el resto eliminados del proceso selectivo.</p>
                     </div>
-                    <div class="tema-card">
-                        <a href="cuarto-ejercicio.html">
-                            <span class="tema-card-number">Parte B</span>
-                            <h3 class="tema-card-title">Cuarto ejercicio</h3>
-                            <p class="tema-card-desc">Economía Española y Hacienda Pública</p>
-                        </a>
-                    </div>
+
+                    <h3>Examen voluntario de idiomas</h3>
+                    <p>El examen voluntario consistirá en un ejercicio sobre una o más lenguas de las especificadas, excluidas la inglesa y la primera elegida del ejercicio obligatorio. Las pruebas serán las mismas que para los idiomas obligatorios.</p>
                 </div>
             </article>
         </div>
