Con Social media preview

--- a/organizacion.html
+++ b/organizacion.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organización | Víctor Gutiérrez Marcos</title>
     <meta name="description" content="Organización - Archivos útiles para la preparación de la oposición">
+    
+    <!-- Open Graph / Social Media Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Organización | Víctor Gutiérrez Marcos">
+    <meta property="og:description" content="Archivos útiles para la preparación de la oposición a TCEE">
+    <meta property="og:image" content="https://victorgutierrezmarcos.es/social-preview.png">
+    <meta property="og:url" content="https://victorgutierrezmarcos.es/organizacion.html">
+    <meta name="twitter:card" content="summary_large_image">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.svg" type="image/x-icon">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
