--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Víctor Gutiérrez Marcos | Oposición TCEE</title>
     <meta name="description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
+    
+    <!-- Open Graph / Social Media Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Víctor Gutiérrez Marcos | Oposición TCEE">
+    <meta property="og:description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
+    <meta property="og:image" content="https://victorgutierrezmarcos.es/social-preview.png">
+    <meta property="og:url" content="https://victorgutierrezmarcos.es/">
+    <meta property="og:site_name" content="Víctor Gutiérrez Marcos">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Víctor Gutiérrez Marcos | Oposición TCEE">
+    <meta name="twitter:description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
+    <meta name="twitter:image" content="https://victorgutierrezmarcos.es/social-preview.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.svg" type="image/x-icon">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
