--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -41,7 +41,7 @@
                         <a href="https://drive.google.com/uc?export=download&id=1BRtywt-V8KJYXOaBcEn3zf93464cfOFL" target="_blank">Test</a>: <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span>
                     </div>
                     <div class="tema-item">
-                        <a href="https://drive.google.com/file/d/1j6JQTXFzvbw4cdTnEKyBpsvCSoie0lLh/view?usp=drive_link" target="_blank">Dictamen de coyuntura</a>: <span class="tema-item-title">Guía y ejemplos para la elaboración del dictamen de coyuntura económica.</span>
+                        <a href="https://drive.google.com/file/d/1j6JQTXFzvbw4cdTnEKyBpsvCSoie0lLh/view?usp=drive_link" target="_blank">Dictamen de coyuntura</a>: <span class="tema-item-title">Guía para la elaboración del dictamen de coyuntura económica.</span>
                     </div>
                 </div>
             </article>
