Temas en Github

--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -38,10 +38,10 @@
                 <h2 class="section-title">Primer ejercicio</h2>
                 <div class="temas-list">
                     <div class="tema-item">
-                        <a href="https://drive.google.com/uc?export=download&id=1BRtywt-V8KJYXOaBcEn3zf93464cfOFL" target="_blank">Test</a>: <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span>
+                        <a href="primer-ejercicio/examenes_oficiales_test.pdf" target="_blank">Test: <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span></a>
                     </div>
                     <div class="tema-item">
-                        <a href="https://drive.google.com/file/d/1j6JQTXFzvbw4cdTnEKyBpsvCSoie0lLh/view?usp=drive_link" target="_blank">Dictamen de coyuntura</a>: <span class="tema-item-title">Guía para la elaboración del dictamen de coyuntura económica.</span>
+                        <a href="primer-ejercicio/esquema_dictamen_economico.pdf" target="_blank">Dictamen de coyuntura: <span class="tema-item-title">Guía para la elaboración del dictamen de coyuntura económica.</span></a>
                     </div>
                 </div>
             </article>
