--- a/temario/quinto-ejercicio.html
+++ b/temario/quinto-ejercicio.html
@@ -36,13 +36,13 @@
                 <h2 class="section-title">Quinto ejercicio</h2>
                 <div class="temas-list">
                     <div class="tema-item">
-                        <a href="https://drive.google.com/file/d/1oj1lEEoUy4ShsuAuXvxCkTt60mGS8ITS/view?usp=drive_link" target="_blank">Parte A: Marketing internacional y técnicas comerciales</a>
+                        <a href="quinto-ejercicio/parte_A.pdf" target="_blank">Parte A: Marketing internacional y técnicas comerciales</a>
                     </div>
                     <div class="tema-item">
-                        <a href="https://drive.google.com/file/d/11fXMqd22-Nvrs_9vAwzMDrUXeFv4Fl-s/view?usp=drive_link" target="_blank">Parte B: Econometría</a>
+                        <a href="quinto-ejercicio/parte_B.pdf" target="_blank">Parte B: Econometría</a>
                     </div>
                     <div class="tema-item">
-                        <span class="tema-item-unavailable">Parte C: Derecho Administrativo y organización del Estado</span>
+                        <a href="tema-no-disponible.html"><span class="tema-item-unavailable">Parte C: Derecho Administrativo y organización del Estado</span></a>
                     </div>
                 </div>
             </article>
