--- a/organizacion.html
+++ b/organizacion.html
@@ -57,19 +57,19 @@
                         <li>Simulador de sorteos de temas.</li>
                         <li>Base para elaborar cronogramas y horarios semanales.</li>
                     </ul>
-                    <a href="https://drive.google.com/uc?export=download&id=1e21NwS2fS8so-AyDaPdOxUFrPENk0vAa" class="download-btn" target="_blank">Descargar Excel</a>
+                    <a href="organizacion/Estrategia y organización.zip" class="download-btn" download>Descargar Excel</a>
                 </div>
 
                 <div class="resource-item">
                     <h4>Estructura del temario</h4>
                     <p>Presentación de PowerPoint que propone una manera de estructurar el temario con los temas del tercer y cuarto ejercicio (considero que puede ser útil para tener una visión global del temario).</p>
-                    <a href="https://drive.google.com/uc?export=download&id=1L2ey8ixCpb2wNx_1jQWzGd-gOLq-6EyU" class="download-btn" target="_blank">Descargar PowerPoint</a>
+                    <a href="organizacion/Estructura del temario.zip" class="download-btn" download>Descargar PowerPoint</a>
                 </div>
 
                 <div class="resource-item">
                     <h4>Cómo cantar un tema</h4>
                     <p>Documento PDF pensado para echar un vistazo antes de comenzar a estudiar mis temas. Sirve como introducción para entender el formato y la manera en la que organizo los conceptos en los temas. Al mismo tiempo contiene consejos sobre aspectos formales y otras cuestiones.</p>
-                    <a href="https://drive.google.com/file/d/1DyKvef1rSRSsDEXfHT9YJHUv6X5h588c/view?usp=drive_link" class="download-btn" target="_blank">Ver PDF</a>
+                    <a href="organizacion/como_cantar_un_tema.pdf" class="download-btn" target="_blank">Ver PDF</a>
                 </div>
 
                 <div class="resource-item">
@@ -79,7 +79,7 @@
                         <li><strong>Plantilla para elaborar temas largos</strong> (plantilla de Word): Es la plantilla de Word que he utilizado para elaborar mis temas, por si alguien quisiera elaborar temas con una estructura similar. Es fácilmente modificable por lo que se puede amoldar a las preferencias y manías personales.</li>
                         <li><strong>Plantilla para elaborar temas cortos</strong> (plantilla de Word): Se trata de una plantilla alternativa por si preferís elaborar temas más esquemáticos en menos páginas.</li>
                     </ul>
-                    <a href="https://drive.google.com/uc?export=download&id=1ep2Ga5EzHOedioCNj2kazTRYgf07Bytv" class="download-btn" target="_blank">Descargar plantillas</a>
+                    <a href="organizacion/Plantillas.zip" class="download-btn" download>Descargar plantillas</a>
                 </div>
             </article>
         </div>
