--- a/organizacion.html
+++ b/organizacion.html
@@ -63,7 +63,10 @@
                 <div class="resource-item">
                     <h4>Estructura del temario</h4>
                     <p>Presentación de PowerPoint que propone una manera de estructurar el temario con los temas del tercer y cuarto ejercicio (considero que puede ser útil para tener una visión global del temario).</p>
-                    <a href="organizacion/Estructura del temario.zip" class="download-btn" download>Descargar PowerPoint</a>
+                    <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
+                        <a href="https://view.officeapps.live.com/op/embed.aspx?src=https://victorgutierrezmarcos.es/organizacion/estructura_temario.ppsx" class="download-btn" target="_blank">Ver presentación</a>
+                        <a href="organizacion/estructura_temario.ppsx" class="download-btn" download>Descargar PowerPoint</a>
+                    </div>
                 </div>
 
                 <div class="resource-item">
