--- a/organizacion.html
+++ b/organizacion.html
@@ -64,8 +64,8 @@
                     <h4>Estructura del temario</h4>
                     <p>Presentación de PowerPoint que propone una manera de estructurar el temario con los temas del tercer y cuarto ejercicio (considero que puede ser útil para tener una visión global del temario).</p>
                     <div style="display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem;">
-                        <a href="organizacion/ver-presentacion.html" class="download-btn" target="_blank">📊 Ver Presentación</a>
-                        <a href="organizacion/estructura_temario.ppsx" class="download-btn" download>💾 Descargar PPSX</a>
+                        <a href="organizacion/ver-presentacion.html" class="download-btn" target="_blank">Ver Presentación</a>
+                        <a href="organizacion/estructura_temario.ppsx" class="download-btn" download>Descargar Presentación</a>
                     </div>
                 </div>
 
