--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Víctor Gutiérrez Marcos | Oposición TCEE">
     <meta property="og:description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
-    <meta property="og:image" content="https://www.victorgutierrezmarcos.es/social-preview.jpg">
-    <meta property="og:image:secure_url" content="https://www.victorgutierrezmarcos.es/social-preview.jpg">
-    <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:alt" content="Vista previa de la web de Víctor Gutiérrez">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://www.victorgutierrezmarcos.es/">
+    <meta property="og:image" content="https://victorgutierrezmarcos.es/social-preview.png">
+    <meta property="og:url" content="https://victorgutierrezmarcos.es/">
     <meta property="og:site_name" content="Víctor Gutiérrez Marcos">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Víctor Gutiérrez Marcos | Oposición TCEE">
     <meta name="twitter:description" content="Materiales para la preparación a la Oposición a Técnico Comercial y Economista del Estado">
     <meta name="twitter:image" content="https://victorgutierrezmarcos.es/social-preview.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -62,8 +58,11 @@
                     </ul>
 
                     <div class="highlight-box">
-                        <p>Todos los contenidos están disponibles en una única carpeta (que se puede descargar en formato .zip):</p>
-                        <a href="https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_?usp=drive_link" target="_blank" class="highlight-link">📁 Descargar todos los materiales</a>
+                        <p>Todos los contenidos están disponibles para descargar en formato ZIP:</p>
+                        <a href="https://github.com/vgutierrezmarcos/victorgutierrezmarcos.github.io/releases/download/materiales-latest/materiales-tcee.zip" download class="highlight-link">📁 Descargar todos los materiales (ZIP)</a>
+                        <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--color-text-muted);">
+                            También disponibles en <a href="https://drive.google.com/drive/folders/1r8qGub-oZS4xKYF-dnT_TdQ2dyAzfxB_?usp=drive_link" target="_blank">Google Drive</a>
+                        </p>
                     </div>
 
                     <p>Confío que todos estos materiales permitan hacer que esta oposición sea más accesible y faciliten la siempre complicada tarea del opositor.</p>
