--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="search-styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -89,5 +91,7 @@
             <p>Víctor Gutiérrez Marcos</p>
         </div>
     </footer>
+    <script src="search-engine.js"></script>
+    <script src="search-ui.js"></script>
 </body>
 </html>
