--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="search-styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -74,5 +75,7 @@
     </footer>
 
     <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+    <script src="search-engine.js"></script>
+    <script src="search-ui.js"></script>
 </body>
 </html>
