--- a/temario/index.html
+++ b/temario/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../search-styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -87,5 +88,7 @@
             <p>Víctor Gutiérrez Marcos</p>
         </div>
     </footer>
+    <script src="../search-engine.js"></script>
+    <script src="../search-ui.js"></script>
 </body>
 </html>
