--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" href="../favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../search-styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -62,5 +63,7 @@
             <p>Víctor Gutiérrez Marcos</p>
         </div>
     </footer>
+    <script src="../search-engine.js"></script>
+    <script src="../search-ui.js"></script>
 </body>
 </html>
