--- a/temario/tema-no-disponible.html
+++ b/temario/tema-no-disponible.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../search-styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -57,5 +58,7 @@
             <p>Víctor Gutiérrez Marcos</p>
         </div>
     </footer>
+    <script src="../search-engine.js"></script>
+    <script src="../search-ui.js"></script>
 </body>
 </html>
