--- a/temario/tercer-ejercicio.html
+++ b/temario/tercer-ejercicio.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../search-styles.css">
 </head>
 <body>
     <header class="site-header">
@@ -159,5 +160,7 @@
             content.classList.toggle('open');
         }
     </script>
+    <script src="../search-engine.js"></script>
+    <script src="../search-ui.js"></script>
 </body>
 </html>
