--- a/temario/segundo-ejercicio.html
+++ b/temario/segundo-ejercicio.html
@@ -37,11 +37,11 @@
                 <nav class="breadcrumb"><a href="index.html">Temario</a><span>›</span>Segundo ejercicio</nav>
                 <h2 class="section-title">Segundo ejercicio</h2>
                 <div class="content-text">
-                    <p>El segundo ejercicio consiste en una <strong>prueba sobre idiomas extranjeros</strong>, debiendo demostrarse el conocimiento, como mínimo, de dos lenguas vivas:</p>
+                    <p>El segundo ejercicio consiste en una <strong>prueba sobre idiomas extranjeros</strong>, debiendo demostrarse el conocimiento, como mínimo, de dos idiomas:</p>
                     
                     <ul>
-                        <li><strong>Inglés</strong> (obligatorio y eliminatorio)</li>
-                        <li>Un segundo idioma a elegir entre: <em>francés, alemán, italiano, ruso, chino, árabe, portugués y japonés</em></li>
+                        <li><strong>Inglés</strong></li>
+                        <li>Un <strong>segundo idioma</strong> a elegir entre: <em>francés, alemán, italiano, ruso, chino, árabe, portugués y japonés</em></li>
                     </ul>
 
                     <p>Para cada una de las lenguas, los aspirantes realizarán las siguientes pruebas:</p>
