Prueba simulador Test

--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="../favicon.svg" type="image/x-icon">
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="../search-styles.css">
 </head>
@@ -39,10 +39,10 @@
                 <h2 class="section-title">Primer ejercicio</h2>
                 <div class="temas-list">
                     <div class="tema-item">
-                        <a href="primer-ejercicio/examenes_oficiales_test.pdf" target="_blank">Test: <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span></a>
+                        <a href="primer-ejercicio/test.html">Test:</a> <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span>
                     </div>
                     <div class="tema-item">
-                        <a href="primer-ejercicio/esquema_dictamen_economico.pdf" target="_blank">Dictamen de coyuntura: <span class="tema-item-title">Guía para la elaboración del dictamen de coyuntura económica.</span></a>
+                        <a href="primer-ejercicio/esquema_dictamen_economico.pdf" target="_blank">Dictamen de coyuntura:</a> <span class="tema-item-title">Guía para la elaboración del dictamen de coyuntura económica.</span>
                     </div>
                 </div>
             </article>
