--- a/temario/primer-ejercicio/simulador.html
+++ b/temario/primer-ejercicio/simulador.html
@@ -22,26 +22,22 @@
     <style>
         .test-container { position: relative; z-index: 1; }
 
-        .tema-selector { margin-bottom: 1rem; }
+        .tema-selector { margin-bottom: 2rem; }
         .tema-selector h3 {
             font-family: var(--font-display);
             font-size: 1.15rem;
             font-weight: 600;
             color: var(--color-text);
-            margin-bottom: 0;
-            padding: 1rem;
-            background: var(--color-bg-light);
-            border: 1px solid var(--color-border-light);
-            border-radius: 8px;
+            margin-bottom: 1rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 2px solid var(--color-accent-gold);
             display: flex;
             align-items: center;
             justify-content: space-between;
             cursor: pointer;
-            transition: all var(--transition-fast);
         }
         .tema-selector h3:hover {
-            background: var(--color-primary-pale);
-            border-color: var(--color-primary);
+            color: var(--color-primary);
         }
         .tema-selector h3 .toggle-all {
             font-size: 0.8rem;
@@ -53,7 +49,7 @@
         }
         .tema-selector h3 .toggle-all:hover { color: var(--color-primary-dark); }
         .tema-selector h3 .accordion-icon {
-            font-size: 1.2rem;
+            font-size: 0.8rem;
             transition: transform 0.3s ease;
             margin-right: 0.5rem;
         }
@@ -66,11 +62,6 @@
             gap: 0.5rem;
         }
         .temas-content {
-            padding: 1rem;
-            border: 1px solid var(--color-border-light);
-            border-top: none;
-            border-radius: 0 0 8px 8px;
-            background: var(--color-white);
             transition: all 0.3s ease;
         }
         .tema-selector.collapsed .temas-content {
@@ -905,10 +896,6 @@
 
             // Actualizar contadores inicial
             actualizarContadores();
-            
-            // Colapsar acordeones por defecto
-            document.getElementById('selector-parte-a').classList.add('collapsed');
-            document.getElementById('selector-parte-b').classList.add('collapsed');
         }
 
         function actualizarToggleAllText() {
