--- a/temario/primer-ejercicio.html
+++ b/temario/primer-ejercicio.html
@@ -39,7 +39,7 @@
                 <h2 class="section-title">Primer ejercicio</h2>
                 <div class="temas-list">
                     <div class="tema-item">
-                        <a href="primer-ejercicio/test.html">Test:</a> <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span>
+                        <a href="primer-ejercicio/examenes_oficiales_test.pdf">Test:</a> <span class="tema-item-title">Recopilación de preguntas tipo test para practicar.</span>
                     </div>
                     <div class="tema-item">
                         <a href="primer-ejercicio/esquema_dictamen_economico.pdf" target="_blank">Dictamen de coyuntura:</a> <span class="tema-item-title">Guía para la elaboración del dictamen de coyuntura económica.</span>
